adjusted styles for sermons list

--- a/styles/sermons.less
+++ b/styles/sermons.less
@@ -1,9 +1,18 @@
 .sermons-index-item {
-    font-size: 3.5em;
 
-    &:before {
+    .sermons-header:after {
         display: block;
         content: '';
         border-top: 1px solid lightgrey;
+        margin: 0 -100px;
+    }
+
+    .sermons-title {
+        font-size: 3.5em;
+    }
+
+    .published-year {
+        font-size: 16px;
+        color: lightgrey;
     }
 }
