--- a/styles/sermons.less
+++ b/styles/sermons.less
@@ -1,3 +1,27 @@
+.cat-index {
+    .cat-index-wrap{
+        display: block;
+        margin: 1em 0;
+        padding: 0;
+        list-style: none;
+
+        .cat-item {
+            display: inline-block;
+
+            a {
+                color: #3f51b5;
+                &:hover,
+                &.active{
+                    font-weight: 600;
+                    text-decoration: underline;
+                }
+            }
+        }
+    }
+
+}
+
+
 .sermons-index-item {
     margin-bottom: 5em;
 
