--- a/styles/sermons.less
+++ b/styles/sermons.less
@@ -67,8 +67,8 @@
 
     .sermons-header {
         position: relative;
-        padding-bottom: 0.5em;
-        margin-bottom: 2.5em;
+        padding-bottom: 0.75em;
+        margin-bottom: 2.25em;
         box-sizing: border-box;
 
         &:after {
@@ -105,4 +105,26 @@
             text-decoration: underline;
         }
     }
+}
+
+
+
+.sermons-pagination {
+  display: block;
+  position: relative;
+
+  .newer-sermons{
+    float: left;
+  }
+
+  .older-sermons{
+    float: right;
+  }
+
+  .new-sermons,
+  .older-sermons {
+    &:hover {
+      font-weight: 600;
+    }
+  }
 }
