changed sermons pagination

--- a/styles/sermons.less
+++ b/styles/sermons.less
@@ -36,9 +36,6 @@
   @media screen and (max-width: 1024px) {
     margin-bottom: 5em;
   }
-  @media screen and (max-width: 640px) {
-    margin-bottom: 2.5em;
-  }
 }
 
 
@@ -47,11 +44,11 @@
 
 
 
-.cat-index {
+.cat-list {
     margin-bottom: 10em;
     .sermons-responsive-margin-bottom();
 
-    .cat-index-wrap{
+    .cat-list-wrap{
         display: block;
         margin: 0;
         padding: 0;
@@ -111,7 +108,7 @@
         }
     }
 
-    .sermons-cat-index {
+    .sermons-cat-list {
         display: inline-block;
         margin-top: 0.5em;
 
