--- a/styles/sermons.less
+++ b/styles/sermons.less
@@ -56,6 +56,7 @@
 
         .cat-item {
             display: inline-block;
+            margin-top: 0.5em;
             margin-right: 1.5em;
 
             a {
