--- a/styles/hope_sermons.less
+++ b/styles/hope_sermons.less
@@ -38,7 +38,7 @@
     &.full-bleed {
       position: relative;
       width: 100vw;
-      left: calc(~"(-100vw + " @width_content ") / 2 - 100px");
+      left: ~"calc((-100vw + " @width_content ") / 2 - 100px)";
       background: lightgrey;
     }
 
