adjustments to sermons list

--- a/styles/hope_sermons.less
+++ b/styles/hope_sermons.less
@@ -40,6 +40,7 @@
       width: 100vw;
       left: ~"calc((-100vw + " @width_content ~") / 2 - 100px)";
       background: lightgrey;
+      overflow: hidden;
     }
 
     .sermons-header {
