adjustments to sermons list

--- a/styles/hope_sermons.less
+++ b/styles/hope_sermons.less
@@ -41,6 +41,14 @@
       left: ~"calc((-100vw + " @width_content ~") / 2 - 100px)";
       background: lightgrey;
       overflow: hidden;
+
+      .sermons-container {
+        max-width: @width_content;
+      }
+    }
+
+    .sermons-container {
+      padding: 0.5em;
     }
 
     .sermons-header {
