adjustments to sermons list

--- a/styles/hope_sermons.less
+++ b/styles/hope_sermons.less
@@ -44,6 +44,8 @@
 
       .sermons-container {
         max-width: @width_content;
+        padding-right: 100px;
+        padding-left: 100px;
         .responsive-padding-horizontal(@tweak-site-side-padding);
       }
     }
@@ -63,8 +65,9 @@
             display: block;
             position: absolute;
             content: '';
+            width: 100%;
             bottom: 0;
-            border-top: 1px solid black;
+            border-bottom: 1px solid black;
         }
     }
 
