adjustments to sermons list

--- a/styles/hope_sermons.less
+++ b/styles/hope_sermons.less
@@ -41,6 +41,7 @@
       left: ~"calc((-100vw + " @width_content ~") / 2 - 100px)";
       background: #f0f0f0;
       overflow: hidden;
+      .sermons-reverse-responsive-padding-horizontal(@tweak-site-side-padding);
 
       .sermons-container {
         max-width: @width_content;
