adjustments to sermons list

--- a/styles/hope_sermons.less
+++ b/styles/hope_sermons.less
@@ -67,6 +67,15 @@
         }
     }
 
+    .sermons-cat-list {
+        display: inline-block;
+        margin-bottom: 0.5em;
+
+        a:hover {
+            font-weight: 600;
+            text-decoration: underline;
+        }
+    }
 
     .sermons-title {
         margin: 0;
@@ -75,16 +84,6 @@
 
         @media screen and (min-width: 641px) {
             font-size: 3em;
-        }
-    }
-
-    .sermons-cat-list {
-        display: inline-block;
-        margin-top: 0.5em;
-
-        a:hover {
-            font-weight: 600;
-            text-decoration: underline;
         }
     }
 }
