--- a/styles/hope_util.less
+++ b/styles/hope_util.less
@@ -1,24 +1,23 @@
 // =======================================================
-
 //    Variables
-
 // =======================================================
 @width_content: 1440px;
 
 
 
+// =======================================================
+//    Color Palette
+// =======================================================
+@nav_bg: rgba(71,145,210,1);
+
+
 
 // =======================================================
-
 //    Responsive Padding + Positioning
-
 // =======================================================
-
 
 // -----------------------------------------
-
 //  Guarded Mixins
-
 
 .sermons-full-bleed-horizontal (@padding, @max) when (@padding > @max) {
   left: -@max;
@@ -41,6 +40,18 @@
         .sermons-full-bleed-horizontal (@padding, @paddingS);
     }
 }
-
-
 // -----------------------------------------
+
+
+
+
+
+
+// =======================================================
+//    Override / Add to existing stylesheet
+// =======================================================
+.Main-content {
+    overflow: hidden;
+}
+
+
