--- a/styles/hope_util.less
+++ b/styles/hope_util.less
@@ -50,7 +50,7 @@
 // =======================================================
 //    Override / Add to existing stylesheet
 // =======================================================
-.Main-content {
+.Main {
     overflow: hidden;
 }
 
