adjusted full bleed bg color

--- a/styles/hope_sermons.less
+++ b/styles/hope_sermons.less
@@ -32,7 +32,7 @@
     &.full-bleed {
       position: relative;
       width: 100vw;
-      background: #f0f0f0;
+      background: #eaeaea;
       overflow: hidden;
       left: ~"calc((-100vw + " @tweak-site-width ~") / 2 - 100px)";
       .sermons-reverse-responsive-padding-horizontal(@tweak-site-side-padding);
