adjusted home page styles

--- a/styles/hope_intro.less
+++ b/styles/hope_intro.less
@@ -36,6 +36,7 @@
 @home-paddingSM: 120px;
 @home-paddingMD: 240px;
 @home-paddingLG: 360px;
+@home-paddingXL: 480px;
 
 
 #home-media,
@@ -45,6 +46,7 @@
     .Index-page-content,
     .Index-page-content{
         max-width: 100%;
+        padding-top: @home-paddingXL;
         padding-right: 2em;
         padding-left: 2em;
         padding-bottom: 0;
