adjusted home page styles

--- a/styles/hope_intro.less
+++ b/styles/hope_intro.less
@@ -20,8 +20,9 @@
 @home-border-width-XL: 20em;
 
 
+#home-connect,
 #home-media,
-#home-connect {
+#home-serve {
     border-bottom: 1em solid #e0e0e0;
 
     .Index-page-content,
@@ -80,6 +81,12 @@
 
 #home-media::before {
     right: 0;
+    border-right-color: #e0e0e0;
+    border-bottom-color: #e0e0e0;
+}
+
+#home-serve::before {
+    left: 0;
     border-right-color: #e0e0e0;
     border-bottom-color: #e0e0e0;
 }
