--- a/styles/hope_intro.less
+++ b/styles/hope_intro.less
@@ -94,7 +94,7 @@
 
     &::before {
         right: 0;
-        border-left-color: @section_bg_3;
+        border-right-color: @section_bg_3;
         border-bottom-color: @section_bg_3;
     }
 }
@@ -103,7 +103,7 @@
     border-bottom: 1em solid @section_bg_5;
 
     &::before {
-        right: 0;
+        left: 0;
         border-left-color: @section_bg_5;
         border-bottom-color: @section_bg_5;
     }
