adjusted home page styles

--- a/styles/hope_intro.less
+++ b/styles/hope_intro.less
@@ -35,9 +35,8 @@
     .Index-page-content{
         max-width: 100%;
         padding-top: @home-padding-top-XL;
-        padding-right: 2em;
-        padding-left: 2em;
         padding-bottom: 0;
+        h3{ font-size: 20px; }
 
         @media screen and (max-width: @home-max-width-LG){
             padding-top: @home-padding-top-LG;
