--- a/styles/hope_intro.less
+++ b/styles/hope_intro.less
@@ -36,13 +36,16 @@
         max-width: 100%;
         padding-top: @home-padding-top-XL;
         padding-bottom: 0;
-        h3{ font-size: 20px; }
+        // h1{ font-size: 36px; }
+        
 
         @media screen and (max-width: @home-max-width-LG){
             padding-top: @home-padding-top-LG;
         }
         @media screen and (max-width: @home-max-width-MD){
             padding-top: @home-padding-top-MD;
+            h1{ font-size: 36px; }
+            h3{ font-size: 20px; line-height: 1.3; }
         }
         @media screen and (max-width: @home-max-width-SM){
             padding-top: @home-padding-top-SM;
