adjustments to timeline

--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -1,15 +1,19 @@
 .hope_timeline-container {
     box-sizing: border-box;
     padding: 0 0.5em;
-    
+
     .hope_timeline-item {
         display: flex;
         justify-content: space-between;
         width: 100%;
 
         .timeline-header {
-            height: 300px;
-            overflow: hidden;
+
+            .image-wrapper {
+                width: 100%;
+                height: 300px;
+                overflow: hidden;
+            }
         }
 
         .timeline-text {
