adjustments to timeline

--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -10,7 +10,7 @@
         .timeline-header {
 
             .image-wrapper {
-                width: 100%;
+                width: 600px;
                 height: 300px;
                 overflow: hidden;
             }
