adjustments to timeline

--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -10,9 +10,13 @@
         .timeline-header {
 
             .image-wrapper {
-                width: 600px;
+                // width: 100%;
                 height: 300px;
                 overflow: hidden;
+
+                img{
+                    display: block;
+                }
             }
         }
 
