--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -6,6 +6,7 @@
         display: flex;
         justify-content: space-between;
         width: 100%;
+        overflow: hidden;
 
         .timeline-header {
 
@@ -13,10 +14,6 @@
                 // width: 100%;
                 height: 300px;
                 overflow: hidden;
-
-                img{
-                    display: block;
-                }
             }
         }
 
