adjustments to timeline

--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -8,7 +8,7 @@
         width: 100%;
         overflow: hidden;
 
-        .timeline-header {
+        .thumbnail {
 
             .image-wrapper {
                 // width: 100%;
