--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -2,16 +2,25 @@
     box-sizing: border-box;
     padding: 0 0.5em;
 
+    
+
     .hope_timeline-item {
         display: flex;
+        position: relative;
         justify-content: space-between;
         width: 100%;
         overflow: hidden;
 
+        .timeline-content {
+            display: block;
+            position: relative;
+            width: 100%;
+        }
+
         .thumbnail {
 
             .image-wrapper {
-                // width: 100%;
+                width: 100%;
                 height: 300px;
                 overflow: hidden;
             }
