--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -18,11 +18,43 @@
         }
 
         .thumbnail {
+                width: 100%;
+                height: 100%;
+                overflow: hidden;
+                background-color: #a9a9a9;
+                -webkit-box-flex: none;
+                -moz-box-flex: none;
+                -webkit-flex: none;
+                -ms-flex: none;
+                flex: none;
 
             .image-wrapper {
-                width: 100%;
-                height: 300px;
-                overflow: hidden;
+                margin-left: -10%;
+                margin-top: -5%;
+                width: 120%;
+                height: 120%;
+                margin-left: -10%;
+                margin-top: -10%;
+                -webkit-transition-property: all;
+                -webkit-transition-duration: .4s;
+                -webkit-transition-timing-function: cubic-bezier(.33,0,.2,1);
+                -webkit-transition-delay: 0;
+                -moz-transition-property: all;
+                -moz-transition-duration: .4s;
+                -moz-transition-timing-function: cubic-bezier(.33,0,.2,1);
+                -moz-transition-delay: 0;
+                -ms-transition-property: all;
+                -ms-transition-duration: .4s;
+                -ms-transition-timing-function: cubic-bezier(.33,0,.2,1);
+                -ms-transition-delay: 0;
+                -o-transition-property: all;
+                -o-transition-duration: .4s;
+                -o-transition-timing-function: cubic-bezier(.33,0,.2,1);
+                -o-transition-delay: 0;
+                transition-property: all;
+                transition-duration: .4s;
+                transition-timing-function: cubic-bezier(.33,0,.2,1);
+                -transition-delay: 0;
             }
         }
 
