--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -15,11 +15,12 @@
             display: block;
             position: relative;
             width: 100%;
+            height: 330px;
         }
 
         .thumbnail {
                 width: 100%;
-                height: 100%;
+                height: 65%;
                 overflow: hidden;
                 background-color: #a9a9a9;
                 -webkit-box-flex: none;
