adjustments to timeline

--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -29,22 +29,24 @@
                 flex: none;
 
             .image-wrapper {
-                -webkit-transition-property: all;
-                -webkit-transition-duration: .4s;
-                -webkit-transition-timing-function: cubic-bezier(.33,0,.2,1);
-                -webkit-transition-delay: 0;
-                -moz-transition-property: all;
-                -moz-transition-duration: .4s;
-                -moz-transition-timing-function: cubic-bezier(.33,0,.2,1);
-                -moz-transition-delay: 0;
-                -ms-transition-property: all;
-                -ms-transition-duration: .4s;
-                -ms-transition-timing-function: cubic-bezier(.33,0,.2,1);
-                -ms-transition-delay: 0;
-                -o-transition-property: all;
-                -o-transition-duration: .4s;
-                -o-transition-timing-function: cubic-bezier(.33,0,.2,1);
-                -o-transition-delay: 0;
+                width: 120%;
+                height: 120%;
+                // -webkit-transition-property: all;
+                // -webkit-transition-duration: .4s;
+                // -webkit-transition-timing-function: cubic-bezier(.33,0,.2,1);
+                // -webkit-transition-delay: 0;
+                // -moz-transition-property: all;
+                // -moz-transition-duration: .4s;
+                // -moz-transition-timing-function: cubic-bezier(.33,0,.2,1);
+                // -moz-transition-delay: 0;
+                // -ms-transition-property: all;
+                // -ms-transition-duration: .4s;
+                // -ms-transition-timing-function: cubic-bezier(.33,0,.2,1);
+                // -ms-transition-delay: 0;
+                // -o-transition-property: all;
+                // -o-transition-duration: .4s;
+                // -o-transition-timing-function: cubic-bezier(.33,0,.2,1);
+                // -o-transition-delay: 0;
                 transition-property: all;
                 transition-duration: .4s;
                 transition-timing-function: cubic-bezier(.33,0,.2,1);
