--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -17,7 +17,7 @@
             width: 100%;
         }
 
-        .thumbnail {
+        .timeline-thumbnail {
                 width: 100%;
                 height: 300px;
                 overflow: hidden;
@@ -28,7 +28,7 @@
                 -ms-flex: none;
                 flex: none;
 
-            .image-wrapper {
+            .timeline-image-wrapper {
                 width: 120%;
                 height: 120%;
                 // -webkit-transition-property: all;
