--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -17,41 +17,30 @@
             width: 100%;
         }
 
-        .timeline-thumbnail {
-                width: 100%;
-                height: 300px;
-                overflow: hidden;
-                background-color: #a9a9a9;
-                -webkit-box-flex: none;
-                -moz-box-flex: none;
-                -webkit-flex: none;
-                -ms-flex: none;
-                flex: none;
 
-            .timeline-image-wrapper {
-                width: 100%;
-                height: 100%;
-                // -webkit-transition-property: all;
-                // -webkit-transition-duration: .4s;
-                // -webkit-transition-timing-function: cubic-bezier(.33,0,.2,1);
-                // -webkit-transition-delay: 0;
-                // -moz-transition-property: all;
-                // -moz-transition-duration: .4s;
-                // -moz-transition-timing-function: cubic-bezier(.33,0,.2,1);
-                // -moz-transition-delay: 0;
-                // -ms-transition-property: all;
-                // -ms-transition-duration: .4s;
-                // -ms-transition-timing-function: cubic-bezier(.33,0,.2,1);
-                // -ms-transition-delay: 0;
-                // -o-transition-property: all;
-                // -o-transition-duration: .4s;
-                // -o-transition-timing-function: cubic-bezier(.33,0,.2,1);
-                // -o-transition-delay: 0;
-                transition-property: all;
-                transition-duration: .4s;
-                transition-timing-function: cubic-bezier(.33,0,.2,1);
-                -transition-delay: 0;
-            }
+        .hope-image-wrapper {
+            width: 100%;
+            height: 100%;
+            // -webkit-transition-property: all;
+            // -webkit-transition-duration: .4s;
+            // -webkit-transition-timing-function: cubic-bezier(.33,0,.2,1);
+            // -webkit-transition-delay: 0;
+            // -moz-transition-property: all;
+            // -moz-transition-duration: .4s;
+            // -moz-transition-timing-function: cubic-bezier(.33,0,.2,1);
+            // -moz-transition-delay: 0;
+            // -ms-transition-property: all;
+            // -ms-transition-duration: .4s;
+            // -ms-transition-timing-function: cubic-bezier(.33,0,.2,1);
+            // -ms-transition-delay: 0;
+            // -o-transition-property: all;
+            // -o-transition-duration: .4s;
+            // -o-transition-timing-function: cubic-bezier(.33,0,.2,1);
+            // -o-transition-delay: 0;
+            transition-property: all;
+            transition-duration: .4s;
+            transition-timing-function: cubic-bezier(.33,0,.2,1);
+            -transition-delay: 0;
         }
 
         .timeline-text {
