--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -20,7 +20,8 @@
 
         .hope-image-wrapper {
             width: 100%;
-            height: 100%;
+            height: 300px;
+            overflow: hidden;
             // -webkit-transition-property: all;
             // -webkit-transition-duration: .4s;
             // -webkit-transition-timing-function: cubic-bezier(.33,0,.2,1);
