--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -18,7 +18,7 @@
         }
 
 
-        .image-wrapper {
+        .hope-image-wrapper {
             width: 100%;
             height: 300px;
             overflow: hidden;
