adjustments to timeline

--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -21,6 +21,7 @@
         .hope-image-wrapper {
             width: 120%;
             height: 300px;
+            margin-left: -10%;
             overflow: hidden;
             // -webkit-transition-property: all;
             // -webkit-transition-duration: .4s;
