--- a/styles/hope_timeline.less
+++ b/styles/hope_timeline.less
@@ -19,9 +19,26 @@
 
 
         .hope-image-wrapper {
-            width: 100%;
+            width: 120%;
             height: 300px;
+            margin-left: -10%;
             overflow: hidden;
+            // -webkit-transition-property: all;
+            // -webkit-transition-duration: .4s;
+            // -webkit-transition-timing-function: cubic-bezier(.33,0,.2,1);
+            // -webkit-transition-delay: 0;
+            // -moz-transition-property: all;
+            // -moz-transition-duration: .4s;
+            // -moz-transition-timing-function: cubic-bezier(.33,0,.2,1);
+            // -moz-transition-delay: 0;
+            // -ms-transition-property: all;
+            // -ms-transition-duration: .4s;
+            // -ms-transition-timing-function: cubic-bezier(.33,0,.2,1);
+            // -ms-transition-delay: 0;
+            // -o-transition-property: all;
+            // -o-transition-duration: .4s;
+            // -o-transition-timing-function: cubic-bezier(.33,0,.2,1);
+            // -o-transition-delay: 0;
             transition-property: all;
             transition-duration: .4s;
             transition-timing-function: cubic-bezier(.33,0,.2,1);
