--- a/styles/hope_images.less
+++ b/styles/hope_images.less
@@ -1,20 +1,21 @@
 .hope_thumbnail {
     width: 100%;
     height: 300px;
+    overflow: hidden;
 
     .hope_image-wrapper {
         width: 120%;
         height: 120%;
         margin-left: -10%;
         margin-top: -5%;
-        overflow: hidden;
+        // overflow: hidden;
         transition-property: all;
         transition-duration: .4s;
         transition-timing-function: cubic-bezier(.33,0,.2,1);
         -transition-delay: 0;
 
         .hope_image {
-            
+
         }
     }
 }
