adjusted hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -40,8 +40,8 @@
             border-bottom: 2px solid rgba(0,0,0,.2);
             margin-bottom: 30px;
             -webkit-backface-visibility: hidden;
-            display: flex;
-            align-items: flex-start;
+            // display: flex;
+            // align-items: flex-start;
 
 
             .hope_thumbnail {
