adjusted hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -33,7 +33,9 @@
         .index_item {
             display: block;
             height: 330px;
-            width: 100%;
+            width: 50%;
+            float: left;
+            background: purple;
             overflow: hidden;
             position: relative;
             background-color: transparent;
