--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -51,6 +51,12 @@
                 height: 65%;
                 overflow: hidden;
 
+                .no-thumgnail {
+                    display: block;
+                    width: 100%;
+                    background: gray;
+                }
+
                 .hope_image-wrapper {
                     width: 120%;
                     height: 120%;
@@ -61,10 +67,6 @@
                     transition-duration: .4s;
                     transition-timing-function: cubic-bezier(.33,0,.2,1);
                     -transition-delay: 0;
-
-                    .hope_image {
-
-                    }
                 }
             }
         }
