--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -45,13 +45,19 @@
             // display: flex;
             // align-items: flex-start;
 
+            .index_link {
+                display: block;
+                height: 100%;
+                width: 100%;
+            }
+
 
             .hope_thumbnail {
                 width: 100%;
                 height: 65%;
                 overflow: hidden;
 
-                .no-thumgnail {
+                .no-thumbnail {
                     display: block;
                     width: 100%;
                     background: gray;
