adjusted hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -5,34 +5,40 @@
 
 
 
-.hope_timeline-container {
-    box-sizing: border-box;
-    padding: 0 0.5em;
+// .hope_timeline-container {
+//     box-sizing: border-box;
+//     padding: 0 0.5em;
 
-    .hope_timeline-item {
-        display: flex;
-        position: relative;
-        justify-content: space-between;
-        width: 100%;
-        overflow: hidden;
+//     .hope_timeline-item {
+//         display: flex;
+//         position: relative;
+//         justify-content: space-between;
+//         width: 100%;
+//         overflow: hidden;
 
-        .timeline-content {
-            display: block;
-            position: relative;
-            width: 100%;
-        }
+//         .timeline-content {
+//             display: block;
+//             position: relative;
+//             width: 100%;
+//         }
 
-        .timeline-text {
-            h1 {
-                font-size: 2.5em;
-            }
-        }
-    }
-}
+//         .timeline-text {
+//             h1 {
+//                 font-size: 2.5em;
+//             }
+//         }
+//     }
+// }
 
 
 .hope_blog-index {
     .hope_blog-container {
+        position: absolute;
+        padding: 1em;
+        width: 50%;
+        box-sizing: border-box;
+
+
         .index_item {
             display: block;
             height: 330px;
