adjusted hope blog

--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -36,8 +36,8 @@
         position: absolute;
         padding: 1em;
         width: 50%;
+        background: #fff;
         box-sizing: border-box;
-
 
         .index_item {
             display: block;
@@ -51,8 +51,6 @@
             border-bottom: 2px solid rgba(0,0,0,.2);
             margin-bottom: 30px;
             -webkit-backface-visibility: hidden;
-            // display: flex;
-            // align-items: flex-start;
 
             .index_link {
                 display: block;
@@ -66,7 +64,7 @@
                 height: 65%;
                 overflow: hidden;
 
-                .no-thumbnail {
+                .hope_no_thumbnail {
                     display: block;
                     width: 100%;
                     background: gray;
