--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -56,32 +56,46 @@
                 display: block;
                 height: 100%;
                 width: 100%;
-            }
 
-
-            .hope_thumbnail {
-                width: 100%;
-                height: 65%;
-                overflow: hidden;
-
-                .hope_no_thumbnail {
-                    display: block;
+                .hope_thumbnail {
                     width: 100%;
-                    background: gray;
+                    height: 65%;
+                    overflow: hidden;
+    
+                    .hope_no_image {
+                        display: block;
+                        width: 100%;
+                        height: 100%;
+                        background: lightgray;
+                    }
+    
+                    .hope_image-wrapper {
+                        width: 120%;
+                        height: 120%;
+                        margin-left: -10%;
+                        margin-top: -5%;
+                        transition-property: all;
+                        transition-duration: .4s;
+                        transition-timing-function: cubic-bezier(.33,0,.2,1);
+                        -transition-delay: 0;
+                    }
                 }
 
-                .hope_image-wrapper {
-                    width: 120%;
-                    height: 120%;
-                    margin-left: -10%;
-                    margin-top: -5%;
-                    // overflow: hidden;
-                    transition-property: all;
-                    transition-duration: .4s;
-                    transition-timing-function: cubic-bezier(.33,0,.2,1);
-                    -transition-delay: 0;
+                .index_context {
+                    display: block;
+                    height: 23%;
+                    overflow:hidden;
+
+                    h1 {
+                        display: block;
+                        font-size: 1.5rem;
+                        text-transform: none;
+                    }
                 }
-            }
-        }
-    }
-}
+
+            } //.index_link
+        } //.index_item
+
+
+    } //.hope_blog-container
+} //.hope_blog-index
