--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -1,34 +1,10 @@
 .is_hidden {
-    display: none;
-    visibility: hidden;
+    display: none !important;
+    visibility: hidden !important;
 }
 
 
 
-// .hope_timeline-container {
-//     box-sizing: border-box;
-//     padding: 0 0.5em;
-
-//     .hope_timeline-item {
-//         display: flex;
-//         position: relative;
-//         justify-content: space-between;
-//         width: 100%;
-//         overflow: hidden;
-
-//         .timeline-content {
-//             display: block;
-//             position: relative;
-//             width: 100%;
-//         }
-
-//         .timeline-text {
-//             h1 {
-//                 font-size: 2.5em;
-//             }
-//         }
-//     }
-// }
 
 
 .hope_blog-index {
