--- a/styles/hope_blog.less
+++ b/styles/hope_blog.less
@@ -69,9 +69,9 @@
                     }
                 }
 
-            } //.index_link
-        } //.index_item
+            } 
+        } 
 
 
-    } //.hope_blog-container
-} //.hope_blog-index
+    } 
+} 
