--- a/styles/hope_util.less
+++ b/styles/hope_util.less
@@ -53,11 +53,19 @@
     box-sizing: border-box;
 }
 
-each(range(12), {
-  .col--@{value} {
-    width: ~"(100% / " @value ~")";
-  }
-});
+.col--1{ width: ~"calc(100% / " 1 ~")"; }
+.col--2{ width: ~"calc(100% / " 2 ~")"; }
+.col--3{ width: ~"calc(100% / " 3 ~")"; }
+.col--4{ width: ~"calc(100% / " 4 ~")"; }
+.col--5{ width: ~"calc(100% / " 5 ~")"; }
+.col--6{ width: ~"calc(100% / " 6 ~")"; }
+.col--7{ width: ~"calc(100% / " 7 ~")"; }
+.col--8{ width: ~"calc(100% / " 8 ~")"; }
+.col--9{ width: ~"calc(100% / " 9 ~")"; }
+.col--10{ width: ~"calc(100% / " 10 ~")"; }
+.col--11{ width: ~"calc(100% / " 11 ~")"; }
+.col--12{ width: ~"calc(100% / " 12 ~")"; }
+
 
 
 
